<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivityAcao3">

        <Button
            android:id="@+id/PreviusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="100dp"
            android:text="@string/anterior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/NextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="100dp"
            android:text="@string/pr_ximo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/TituloTextVieww"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="50dp"
            android:text="@string/titulo"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/AutorTextVieww"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/autor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TituloTextVieww" />

        <TextView
            android:id="@+id/AnoTextVieww"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/ano"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AutorTextVieww" />

        <TextView
            android:id="@+id/NotaTextVieww"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/nota"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AnoTextVieww" />

        <TextView
            android:id="@+id/TituloView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/tituloView"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/TituloTextVieww"
            app:layout_constraintStart_toEndOf="@+id/TituloTextVieww"
            app:layout_constraintTop_toTopOf="@+id/TituloTextVieww" />

        <TextView
            android:id="@+id/AutorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/autorView"
            app:layout_constraintBottom_toBottomOf="@+id/AutorTextVieww"
            app:layout_constraintStart_toEndOf="@+id/AutorTextVieww"
            app:layout_constraintTop_toTopOf="@+id/AutorTextVieww" />

        <TextView
            android:id="@+id/AnoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/anoView"
            app:layout_constraintBottom_toBottomOf="@+id/AnoTextVieww"
            app:layout_constraintStart_toEndOf="@+id/AnoTextVieww"
            app:layout_constraintTop_toTopOf="@+id/AnoTextVieww" />

        <TextView
            android:id="@+id/NotaView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/notaView"
            app:layout_constraintBottom_toBottomOf="@+id/NotaTextVieww"
            app:layout_constraintStart_toEndOf="@+id/NotaTextVieww"
            app:layout_constraintTop_toTopOf="@+id/NotaTextVieww" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>